<resources tools:ignore="ExtraTranslation" xmlns:tools="http://schemas.android.com/tools">
            <string name="appintro_introslide_title">Welcome to the official OpenGApps.org App</string>
            <string name="appintro_storageperm_title">File Storage Permission</string>
            <string name="appintro_root_title">Root Permission</string>
            <string name="appintro_label_architecture">CPU Architecture</string>
            <string name="appintro_label_android">Android Version</string>
            <string name="appintro_label_variant">Package Variant</string>
            <string name="label_tos">Terms of Use</string>
            <string name="appintro_storageperm_explain">To download an Open GApps package, you have to grant the app permission to your File Storage</string>
            <string name="slide_arch_description">Please select the architecture you’d like to use for your Open GApps package</string>
            <string name="slide_android_description">Please select the Android version you’d like to use for your Open GApps package</string>
            <string name="slide_variant_description">Please select the package variant you’d like to use for your Open GApps package</string>
            <string name="appintro_root_explanation">The app offers an integrated install-mode to directly install a downloaded package. This install-mode requires <i>root access</i>. If you want to use it, you need to grant us root permission. \nThis step is completely optional.</string>
            <string name="appintro_terms_explain">The pre-built packages from OpenGApps.org are provided ONLY as courtesy by OpenGApps.org without warranty of ANY kind, under the terms that they can be freely used for personal use only, and are not allowed to be mirrored to the public other than OpenGApps.org. \n \n Take note that Open GApps doesn’t provide you with any license for Google’s APKs included in the package. The Open GApps packages merely provide a convenient way to sideload APKs to your device. It is your own responsibility to obtain the proper permissions by e.g. buying an OHA-licensed device with pre-installed Google Apps and/or acquiring the applications from Google’s Play Store.</string>
            <string name="slide_arch_hint">The app automatically detects the architecture of your device</string>
            <string name="slide_android_hint">The app automatically detects the Android version of your device</string>
            <string name="slide_variant_hint">The app automatically detects the variant installed on your device</string>
            <string name="detected">detected</string>
            <string name="pref_header_interface">Interface</string>
            <string name="pref_header_install">Install</string>
            <string name="pref_header_download">Download</string>
            <string name="label_dark_mode">Dark theme</string>
            <string name="new_folder">New Folder</string>
            <string name="pref_header_gapps_selection">GApps-Selection</string>
            <string name="action_settings">Settings</string>
            <string name="label_wifi_only">Wi-Fi only</string>
            <string name="label_download_dir">Download directory</string>
            <string name="label_wipe_cache">Wipe Cache/Dalvik</string>
            <string name="label_download_md5">Download MD5</string>
            <string name="label_automatic_cleanup">Automatically clean-up downloads</string>
            <string name="label_number_packages_kept">Number of packages to keep before cleaning up</string>
            <string name="label_download_versionlog">Download VersionLog</string>
            <string name="label_root_mode">Use Root Permission</string>
            <string name="label_pref_install_warning">Show pre-install warning dialog</string>
            <string name="label_pref_delete_warning">Show pre-delete warning dialog</string>
            <string name="explanation_dark_mode">Dark theme improves readability in low light conditions</string>
            <string name="summary_wifi_only">Download over Wi-Fi only</string>
            <string name="explanation_newest_version">Delete outdated version if a new similar variant has been downloaded</string>
            <string name="explanation_keep_packages">%1$d older similar packages will be kept</string>
            <string name="explanation_download_md5">Download MD5-Checksum to verify package integrity</string>
            <string name="explanation_download_versionlog">Download VersionLog to list package content</string>
            <string name="summary_root_mode">Grant root access to enable install-mode and the wipe cache/dalvik setting</string>
            <string name="explanation_wipe_dalvik">Forces re-optimization of cache at next boot. Takes more time, but helps to prevent potential issues.</string>
            <string name="explanation_pref_install_warning">Show a warning dialog before installation to prevent accidental installation</string>
            <string name="explanation_pref_delete_warning">Show a warning dialog before deleting a package to prevent accidental removal</string>
            <string name="explanation_cleanup_now">Clean-up older packages right now?</string>
            <string name="label_confirm">Confirm</string>
            <string name="label_select">Select</string>
            <string name="label_create">Create</string>
            <string name="text_freespace">%1$s free</string>
            <string name="title_storage_chooser">Choose Storage</string>
            <string name="title_storage_chooser_internal">Internal Storage</string>
            <string name="label_select_external_storage">Select External Storage</string>
            <string name="create_folder_success">Folder created</string>
            <string name="create_folder_error">Could not create folder</string>
            <string name="create_folder_error_no_write_access">Cannot write to this folder</string>
            <string name="create_folder_error_already_exists">Folder already exists</string>
            <string name="hint_folder_name">Folder Name</string>
            <string name="error_tip_empty_field">Empty folder name</string>
        <string name="label_links">Links</string>
        <string name="label_blog">Blog</string>
            <string name="app_name">Open GApps</string>
            <string name="label_ok">OK</string>
            <string name="label_cancel">Cancel</string>
            <string name="label_no">No</string>
            <string name="label_yes">Yes</string>
            <string name="label_close">Close</string>
            <string name="label_adblock_detected">Adblocker Detected</string>
            <string name="label_permission_denied">Permission denied</string>
            <string name="permission_granted">Permission granted! Thanks!</string>
            <string name="label_grant_permission">Grant Permission</string>
            <string name="navigation_drawer_open">Open navigation drawer</string>
            <string name="navigation_drawer_close">Close navigation drawer</string>
            <string name="label_accept">Accept</string>
            <string name="label_accepted">Accepted</string>
            <string name="label_decline">Decline</string>
            <string name="label_delete">Delete</string>
            <string name="label_delete_warning">Delete %1$s?</string>
            <string name="dont_show_again">Don’t show again</string>
            <string name="title_optional_app_update">App update available</string>
            <string name="ms_prev">Previous</string>
            <string name="ms_next">Next</string>
            <string name="ms_end">Complete</string>
            <string name="label_now">Now</string>
            <string name="label_later">Later</string>
            <string name="label_never">Never</string>
            <string name="label_rate">Rate</string>
            <string name="title_rate_us">Rate this app</string>
            <string name="message_rate_us">We hope you enjoy using this app, it won’t take more than a minute to rate or give some feedback. It can help other users discover this app too!</string>
            <string name="label_supportproject">Support</string>
            <string name="message_supportproject">If you like the Open GApps packages, please consider supporting the project. The development of the packages is completely open source and we all benefit from the developers’ efforts!</string>
            <string name="explanation_permission_denied">In order to work correctly you have to grant Open GApps the permission to your external storage. Makes sense, doesn’t it?</string>
            <string name="explanation_adblock_detected">Adblocker detected!? Ads can be frustrating, but they keep the project and its developers alive! Please consider disabling your adblocker or a donation instead</string>
            <string name="title_webview_not_installed">Oops! No WebView Provider installed!?</string>
            <string name="message_webview_not_installed">It seems you have uninstalled \"Stock WebView\", but your ROM doesn’t support the \"Google WebView\". Re-flash your ROM and ask the ROM developer to add support for alternative WebView Providers.</string>
            <string name="label_download_error">Connection to server failed</string>
            <string name="label_download">Download</string>
            <string name="label_pause">Pause</string>
            <string name="label_paused">Paused</string>
            <string name="label_resume">Resume</string>
            <string name="label_architecture">Architecture</string>
            <string name="label_variant">Variant</string>
            <string name="label_size">Size</string>
            <string name="label_filesize">File size</string>
            <string name="invalid_combo">Invalid combination</string>
            <string name="label_install">Install</string>
            <string name="label_install_warning">Install %1$s?</string>
            <string name="label_update">Update</string>
            <string name="label_change_selection">Change Selection</string>
            <string name="download_started">Download started</string>
            <string name="label_download_package">Download Package</string>
            <string name="label_install_package">Install package</string>
            <string name="label_md5_checksum">MD5-Checksum</string>
            <string name="label_copy_checksum">Copy Checksum</string>
            <string name="file_not_found">File not found</string>
            <string name="label_versionlog">VersionLog</string>
            <string name="label_show_md5">Show MD5-Checksum</string>
            <string name="label_show_versionlog">Show VersionLog</string>
            <string name="label_share">Share</string>
            <string name="label_new">new</string>
            <string name="label_checksum_valid">The checksum is valid</string>
            <string name="label_checksum_invalid">The checksum is invalid</string>
            <string name="label_starting_download">Starting Download</string>
            <string name="explanation_wifi_needed">You are not connected to Wi-Fi. To enable downloading via mobile data, disable "Wi-Fi only" in the settings</string>
            <string name="explanation_optional_app_update">An update for the app is available</string>
            <string name="explanation_forced_update">You have to update in order to continue using the app</string>
            <string name="label_root_is_need_for_rootmode">Your device needs to be rooted in order to activate</string>
        <string name="label_support_opengapps">Support the Open GApps Project</string>
            <string name="label_version">Version</string>
            <string name="label_android" translatable="false">Android</string>
</resources>