<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <PreferenceCategory android:title="Gapps Selection">

        <ListPreference
            android:defaultValue="1"
            android:title="@string/label_architecture"
            android:entries="@array/architectures"
            android:entryValues="@array/architectures"
            android:key="selection_arch" />
        <ListPreference
            android:defaultValue="1"
            android:title="@string/label_android"
            android:entries="@array/android_versions"
            android:entryValues="@array/android_versions"
            android:key="selection_android" />
        <ListPreference
            android:defaultValue="1"
            android:title="@string/label_variant"
            android:entries="@array/opengapps_variant"
            android:entryValues="@array/opengapps_variant"
            android:key="selection_variant" />
    </PreferenceCategory>
</PreferenceScreen>
