<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidUnknownAttribute -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:ignore="Overdraw">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:paddingEnd="32dp"
        android:paddingStart="32dp"
        android:text="@string/label_tos"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="normal|bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/label_tos" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/accept_buttons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/appintro_terms_explain"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:text="THIS IS A LOT OF TEXT" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/accept_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/decline_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_decline"
            android:textColor="@color/colorAccent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/accept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_accept"
            android:textColor="@color/colorPrimaryDark"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
