<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/constraintLayout4">

    <TextView
        android:text="@string/label_permission_denied"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_permission_denied"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout4"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout4"
        android:layout_marginTop="16dp" />

    <TextView
        android:text="@string/explanation_permission_denied"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="99"
        android:id="@+id/textView2"
        android:textColor="#E0E0E0"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout4"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/label_permission_denied"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout4"
        android:layout_marginEnd="24dp" />

    <Button
        android:text="@string/label_grant_permission"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/grant_permission_button"
        android:textColor="@android:color/white"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout4"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout4"
        android:layout_marginBottom="8dp" />

</android.support.constraint.ConstraintLayout>