<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/headline_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_download_package"
        android:textSize="@dimen/font_size_headline"
        android:textStyle="normal|bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_architecture"
        android:layout_width="110dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_architecture"
        android:textAllCaps="false"
        android:textSize="@dimen/font_size_subheadline"
        app:layout_constraintLeft_toRightOf="@+id/image_arch"
        app:layout_constraintTop_toBottomOf="@+id/label_installed_tag" />

    <TextView
        android:id="@+id/label_android"
        android:layout_width="110dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_android"
        android:textSize="@dimen/font_size_subheadline"
        app:layout_constraintLeft_toRightOf="@+id/image_android"
        app:layout_constraintTop_toBottomOf="@+id/label_architecture" />

    <TextView
        android:id="@+id/label_variant"
        android:layout_width="110dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_variant"
        android:textSize="@dimen/font_size_subheadline"
        app:layout_constraintLeft_toRightOf="@+id/image_variant"
        app:layout_constraintTop_toBottomOf="@+id/label_android" />

    <ImageView
        android:id="@+id/image_arch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/label_architecture"
        android:src="@drawable/ic_architecture"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_version" />

    <ImageView
        android:id="@+id/image_android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/label_android"
        android:src="@drawable/ic_android"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_arch" />

    <ImageView
        android:id="@+id/image_variant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/label_variant"
        android:src="@drawable/ic_variant"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_android" />

    <TextView
        android:id="@+id/selected_architecture"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/invalid_combo"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintLeft_toRightOf="@+id/label_architecture"
        app:layout_constraintTop_toBottomOf="@+id/newest_version" />

    <TextView
        android:id="@+id/selected_android"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/invalid_combo"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintLeft_toRightOf="@+id/label_android"
        app:layout_constraintTop_toBottomOf="@+id/selected_architecture" />

    <TextView
        android:id="@+id/selected_variant"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/invalid_combo"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintLeft_toRightOf="@+id/label_variant"
        app:layout_constraintTop_toBottomOf="@+id/selected_android" />

    <TextView
        android:id="@+id/label_installed_tag"
        android:layout_width="110dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_version"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@+id/image_version"
        app:layout_constraintTop_toBottomOf="@+id/headline_download" />

    <TextView
        android:id="@+id/newest_version"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        app:layout_constraintLeft_toRightOf="@+id/label_installed_tag"
        app:layout_constraintTop_toBottomOf="@+id/headline_download"
        tools:text="latest Version" />

    <ImageView
        android:id="@+id/image_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/label_version"
        android:src="@drawable/ic_current_version"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headline_download" />

    <org.opengapps.opengapps.download.DownloadProgressView
        android:id="@+id/progress_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_variant" />

    <Button
        android:id="@+id/download_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/label_download"
        android:textColor="@color/colorAccent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_view" />

    <Button
        android:id="@+id/change_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_change_selection"
        app:layout_constraintRight_toLeftOf="@+id/download_button"
        app:layout_constraintTop_toBottomOf="@+id/progress_view" />

</android.support.constraint.ConstraintLayout>